# everest-framework

./: CMakeLists.txt
everestjs/: everestjs.cpp  index.js
everestpy/src/everest/: everestpy.cpp  misc.cpp  misc.hpp
include/framework/: everest.hpp  runtime.hpp
include/utils/: config.hpp  events.h  types.hpp
lib/: config.cpp  everest.cpp  runtime.cpp
src/: CMakeLists.txt  manager.cpp
